--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,10 @@
   "installCommand": "npm install --legacy-peer-deps",
   "framework": "vite",
   "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
+    {
+      "source": "/((?!assets|favicon|logo|robots|sitemap).*)",
+      "destination": "/index.html"
+    }
   ],
   "headers": [
     {
@@ -17,5 +20,7 @@
         }
       ]
     }
-  ]
+  ],
+  "cleanUrls": false,
+  "trailingSlash": false
 }
