--- a/package.json
+++ b/package.json
@@ -14,31 +14,37 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.7.1",
+    "@emotion/react": "^11.14.0",
     "@emotion/styled": "^10.3.0",
-    "@supabase/supabase-js": "^2.49.4",
-    "@vimeo/player": "^2.26.0",
+    "@supabase/supabase-js": "^2.80.0",
+    "@vimeo/player": "^2.30.1",
     "aos": "^2.3.4",
     "espree": "^10.0.1",
-    "framer-motion": "^12.9.4",
+    "framer-motion": "^12.23.24",
     "leaflet": "^1.9.4",
     "modern-normalize": "^2.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-loader-spinner": "^6.1.6",
-    "react-responsive": "^10.0.0",
-    "react-router-dom": "^7.5.2",
+    "react-responsive": "^10.0.1",
+    "react-router-dom": "^7.9.5",
     "redux-persist": "^6.0.0",
-    "styled-components": "^6.0.7",
+    "styled-components": "^6.1.19",
     "yup": "^1.4.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
     "@types/aos": "^3.0.7",
     "@types/leaflet": "^1.9.14",
-    "@types/react": "^18.3.21",
-    "@types/react-dom": "^18.2.7",
+    "@types/node": "^24.10.0",
+    "@types/react": "^18.3.26",
+    "@types/react-dom": "^18.3.7",
+    "@types/react-helmet": "^6.1.11",
+    "@types/react-loader-spinner": "^3.1.3",
+    "@types/react-responsive": "^8.0.8",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.35",
     "@types/vimeo__player": "^2.18.3",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
